Allow open-ended calendar events
